<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <TextView
        android:id="@+id/curState"
        style="@style/MediumMono"
        android:layout_width="104dp"
        android:layout_height="132dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/farmerCurrent"
        android:textColor="@color/text_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cState"
        android:layout_width="129dp"
        android:layout_height="32dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/cState"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalState"
        style="@style/MediumMono"
        android:layout_width="104dp"
        android:layout_height="132dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/farmerFinl"
        android:textColor="@color/text_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/goalState"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/farmer_mover"
        android:layout_width="163dp"
        android:layout_height="402dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curState"></LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/Fmessage"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalState" />

    <LinearLayout
        android:id="@+id/Fsolvingbuttons"
        android:layout_width="144dp"
        android:layout_height="218dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/farmer_mover"
        app:layout_constraintTop_toBottomOf="@+id/message">

        <Button
            android:id="@+id/Breset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Button
            android:id="@+id/Bsolve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solve" />

        <Button
            android:id="@+id/Bnext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <TextView
            android:id="@+id/Benchmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benchmarks"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/moves"
        android:layout_width="47dp"
        android:layout_height="22dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:text="@string/moves"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movecount"
        android:layout_width="28dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:text="@string/movecount"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moves" />

    <TextView
        android:id="@+id/stats"
        android:layout_width="172dp"
        android:layout_height="157dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="25dp"
        android:background="@color/white"
        android:text="@string/statistics"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/farmer_mover"
        app:layout_constraintTop_toBottomOf="@+id/Fsolvingbuttons"
        app:layout_constraintVertical_bias="0.321" />

</androidx.constraintlayout.widget.ConstraintLayout>