<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red">

    <TextView
        android:id="@+id/fstate2"
        android:layout_width="118dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/goalState"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pstate2"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/cState"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bmovescount"
        android:layout_width="28dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/movecount"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmoves" />

    <TextView
        android:id="@+id/Bstats"
        android:layout_width="182dp"
        android:layout_height="156dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/statistics"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/bmessage"
        android:layout_width="192dp"
        android:layout_height="47dp"
        android:text="@string/Bmessage"
        android:textAlignment="center"
        android:textColor="@android:color/transparent"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmovescount" />

    <TextView
        android:id="@+id/bmoves"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_marginTop="292dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/moves"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalState3"
        style="@style/MediumMono"
        android:layout_width="192dp"
        android:layout_height="190dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="5dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/BigFinal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bmoves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fstate2"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/bigcur"
        style="@style/MediumMono"
        android:layout_width="192dp"
        android:layout_height="190dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="11dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/BigCurrent"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bmoves"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pstate2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="63dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66">

        <Button
            android:id="@+id/Breset"
            android:layout_width="70sp"
            android:layout_height="48dp"
            android:text="@string/reset"
            android:textSize="11sp" />

        <Button
            android:id="@+id/Bsolve"
            android:layout_width="70sp"
            android:layout_height="48dp"
            android:text="@string/solve"
            android:textSize="11sp" />

        <Button
            android:id="@+id/Bnext"
            android:layout_width="70sp"
            android:layout_height="48dp"
            android:text="@string/next"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/Benchmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/benchmarks"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>