<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <TextView
        android:id="@+id/textView9"
        style="@style/MediumMono"
        android:layout_width="104dp"
        android:layout_height="132dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/farmerinitial"
        android:textColor="@color/text_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="163dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/farmerIntro1"
        android:textColor="@color/text_purple"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:text="@string/farmerWelcome"
        android:textColor="#5E35B1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="doProblem"
        android:text="@string/farmerBegin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="174dp"
        android:layout_height="264dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/farmerIntro2"
        android:textColor="@color/text_purple"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView16"
        style="@style/MediumMono"
        android:layout_width="104dp"
        android:layout_height="132dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/farmerFinl"
        android:textColor="@color/text_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>