<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        style="@style/MediumMono"
        android:layout_width="150dp"
        android:layout_height="152dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/puzzleInitial"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        style="@style/MediumMono"
        android:layout_width="150dp"
        android:layout_height="152dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@color/dark_white"
        android:backgroundTint="@color/white"
        android:text="@string/puzzleFinal"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="246dp"
        android:layout_height="102dp"
        android:layout_marginTop="24dp"
        android:text="@string/puzzleWelcome"
        android:textColor="@color/dark_white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="doProblem"
        android:text="@string/puzzleBegin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="112dp"
        android:layout_height="123dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/puzzleIntro1"
        android:textColor="@color/dark_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="127dp"
        android:layout_height="161dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:text="@string/puzzleIntro2"
        android:textColor="@color/dark_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>