<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/puzzle2"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/dark_red"
        android:onClick="viewBig"
        android:text="@string/BigPuzzle"
        android:textColor="@color/dark_white"
        android:textColorHighlight="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/mainWelc"
        android:layout_width="315dp"
        android:layout_height="116dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/mainWelcome"
        android:textColor="@color/dark_white"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/mainchoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainchoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="96dp"
        android:text="@string/mainOptions"
        android:textColor="@color/dark_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/farmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainWelc" />

    <Button
        android:id="@+id/farmer"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/purple_200"
        android:onClick="viewFarmer"
        android:text="@string/farmerButton"
        android:textColor="@color/dark_white"
        android:textSize="14sp"
        app:iconTint="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/puzzle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainchoose" />

    <Button
        android:id="@+id/puzzle"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="viewPuzzle"
        android:text="@string/puzzleButton"
        android:textColor="@color/dark_white"
        android:textColorHighlight="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/puzzle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farmer"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>